--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,12 +6,38 @@
   grid-template-areas: ". . . . . . . .";
 }
 
-#HeaderVideo {
-  position: fixed;
-  right: 0;
-  bottom: 0;
+header {
+  position: relative;
+  height: 100vh;
+  min-height: 25rem;
+  width: 100%;
+  overflow: hidden;
+}
+
+header video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
   min-width: 100%;
   min-height: 100%;
-  z-index: -90;
+  width: auto;
+  height: auto;
+  z-index: 0;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+header .container {
+  position: relative;
+  z-index: 2;
+}
+
+header .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0.9;
+  z-index: 1;
 }
 
