--- a/src/main.scss
+++ b/src/main.scss
@@ -1,49 +1,30 @@
-.header {
-  display: grid;
-  grid-template-columns: 20% 10% 10% 10% 10% 20% 10% 10%;
-  grid-template-rows: 10%;
-  gap: 0px 0px;
-  grid-template-areas:
-    ". . . . . . . .";
-}
-
-
-header {
-  position: relative;
-  height: 100vh;
-  min-height: 25rem;
-  width: 100%;
+.intro{
+  max-height: 100vh;
   overflow: hidden;
+
 }
 
-header video {
+.video{
   position: absolute;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
+  padding-bottom: 56.25%;
+
+
+}
+
+.vide__media{
+  width: 100%;
   height: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
   z-index: 0;
-  -ms-transform: translateX(-50%) translateY(-50%);
-  -moz-transform: translateX(-50%) translateY(-50%);
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
+  overflow: hidden;
 }
 
 header .container {
   position: absolute;
   z-index: 2;
-}
 
-header .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0.9;
-  z-index: 1;
 }
 
 
