--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,25 +1,30 @@
-.intro {
-  max-height: 100vh;
-  overflow: hidden;
-}
-
-.video {
-  position: absolute;
-  padding-bottom: 56.25%;
-}
-
-.vide__media {
+#hero {
+  height: 100vh;
   width: 100%;
-  height: auto;
-  position: absolute;
+  background: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#hero::after {
+  width: 100%;
+  height: 100%;
+  content: "";
+  position: relative;
+  z-index: 10;
   top: 0;
   left: 0;
-  z-index: 0;
-  overflow: hidden;
 }
 
-header .container {
-  position: absolute;
-  z-index: 2;
+#hero video {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
