--- a/src/main.scss
+++ b/src/main.scss
@@ -1,30 +1,72 @@
-.intro{
-  max-height: 100vh;
-  overflow: hidden;
-
+//.intro{
+//  max-height: 100vh;
+//  overflow: hidden;
+//
+//}
+//
+//.video{
+//  position: absolute;
+//  padding-bottom: 56.25%;
+//
+//
+//}
+//
+//.vide__media{
+//  width: 100%;
+//  height: auto;
+//  position: absolute;
+//  top: 0;
+//  left: 0;
+//  z-index: 0;
+//}
+//
+//header .container {
+//  position: absolute;
+//  z-index: 2;
+//
+//}
+#hero {
+  height:100vh;
+  width:100%;
+  background:red;
+  display:flex;
+  align-items:center;
+  justify-content: center;
 }
 
-.video{
-  position: absolute;
-  padding-bottom: 56.25%;
 
 
+#hero::after {
+  width:100%;
+  height:100%;
+  content: '';
+  position:relative;
+  z-index:10;
+  top:0;
+  left:0;
 }
 
-.vide__media{
-  width: 100%;
-  height: auto;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
-  overflow: hidden;
+
+#hero video {
+  width:100%;
+  height:100%;
+  position:relative;
+  top:0;
+  left:0;
+  z-index:5;
+  object-fit:cover;
 }
 
-header .container {
-  position: absolute;
-  z-index: 2;
 
-}
+
+
+
+
+
+
+
+
+
+
 
 
