--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,6 @@
 #hero {
   height: 100vh;
   width: 100%;
-  background: red;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -26,5 +25,20 @@
   z-index: 5;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+#hero .caption {
+  position: absolute;
+  z-index: 20;
+  text-align: center;
+  color: #ffffff;
+}
+
+footer {
+  background-color: #3751ff;
+}
+
+footer > nav > li > a {
+  color: #fbc917 !important;
 }
 
