add reviews add change lower

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -68,7 +68,7 @@
 
 
 footer{
-  background-color: #3751ff;
+  background-color: #9bc5fc;
 }
 
 footer>nav>li>a{
@@ -76,7 +76,7 @@ footer>nav>li>a{
 }
 
 footer_lower{
-  background-color: #3751ff;
+  background-color: #9bc5fc;
 }
 
 
